--- a/README
+++ b/README
@@ -1,4 +1,4 @@
-Adds the usual collection of tools at high strength and speed made from the "blazing" block.
+Adds an axe, pick, shovel and sword at high strength and speed made from the "blazing" block.
 
 Crafting
 
